# arco

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  RELEASE_POLICY.md  clippy.toml  justfile
.github/: labeler.yaml
.github/workflows/: ci.yaml  commit.yaml  labeler.yaml  release.yaml
bindings/python/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  arco.pyi  pyproject.toml
bindings/python/arco/: __init__.py
bindings/python/src/: arrays.rs  bounds.rs  constraint.rs  enums.rs  errors.rs  expr.rs  handles.rs  helpers.rs  index_set.rs  iterators.rs  lib.rs  logging.rs  model_blocks.rs  model_pretty.rs  serde_bridge.rs  slack_variable.rs  snapshot.rs  solution.rs  solver.rs  variable.rs  views.rs
crates/: CHANGELOG.md
crates/arco-bench/: Cargo.toml  README.md
crates/arco-bench/src/: main.rs
crates/arco-blocks/: Cargo.toml
crates/arco-blocks/src/: dag.rs  error.rs  lib.rs  once_map.rs
crates/arco-core/: Cargo.toml
crates/arco-core/src/: lib.rs  slack.rs  solver.rs  types.rs
crates/arco-core/src/model/: builder.rs  csc_import.rs  error.rs  inspect.rs  metadata.rs  mod.rs  pretty.rs  slack.rs  storage.rs
crates/arco-core/src/model/tests/: metadata_inspect.rs  slack_csc.rs  support.rs
crates/arco-expr/: Cargo.toml
crates/arco-expr/src/: ids.rs  lib.rs
crates/arco-expr/src/expr/: builders.rs  constraint.rs  core.rs  error.rs  mod.rs
crates/arco-highs/: Cargo.toml
crates/arco-highs/src/: async_matrix.rs  ffi.rs  lib.rs  solution.rs  solver.rs  status.rs
crates/arco-highs/tests/: ffi_smoke.rs  integration.rs
crates/arco-solver/: Cargo.toml
crates/arco-solver/src/: config.rs  error.rs  lib.rs  status.rs  traits.rs
crates/arco-tools/: Cargo.toml
crates/arco-tools/src/: lib.rs  memory.rs
docs/: README.md  index.md
docs/contracts/: python-model-rendering.md
docs/explanation/: README.md  architecture.md  core-concepts.md  why-arco.md
docs/how-to/: README.md  block-schemas.md  building-optimization-models.md  configure-solver.md  debug-infeasibility.md  enable-logging.md  handle-errors.md  inspect-model.md  numpy-integration.md
docs/reference/: README.md  index.md  known-problems.md
docs/tutorials/: README.md  block-composition.md  indexed-models.md  integer-programming.md  your-first-model.md
scripts/: python_package_smoke.py  sync_python_licenses.py  test_docs_doctest.py
