[workspace]
members = ["crates/*", "bindings/python"]
exclude=["scripts"]
resolver = "3"

[workspace.dependencies]
tracing = "0.1"
serde_json = "1.0"
sysinfo = "0.33"
pyo3 = "0.28"
tracing-subscriber = "0.3"
arco-core = { path = "crates/arco-core" }
arco-expr = { path = "crates/arco-expr" }
arco-solver = { path = "crates/arco-solver" }
arco-highs = { path = "crates/arco-highs" }
arco-tools = { path = "crates/arco-tools" }
arco-blocks = { path = "crates/arco-blocks" }

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license-file = "licenses/BSD-3-Clause.txt"
authors = [
    "pesap <pesap@users.noreply.github.com>",
]
description = "Workspace for the Arco multi-language bindings"
homepage = "https://github.com/pesap/arco"
repository = "https://github.com/pesap/arco"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
# Enable pedantic lints for stricter code quality
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
uninlined_format_args = "allow"
return_self_not_must_use = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
match_same_arms = "allow"
unused_async = "allow"
manual_let_else = "allow"
used_underscore_binding = "allow"
ref_option_ref = "allow"
format_push_string = "allow"
case_sensitive_file_extension_comparisons = "allow"
unnecessary_wraps = "deny"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
no_effect_underscore_binding = "allow"
redundant_closure_for_method_calls = "allow"
result_large_err = "allow"

# No debug macros in production
dbg_macro = "deny"

# No incomplete code markers
todo = "deny"
unimplemented = "deny"
