[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "arco"
version = "0.1.0"
description = "Python bindings for Arco optimization library"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["arco.pyi"]
python-source = "."

[dependency-groups]
dev = [
    "ipython>=8.18.1",
]
