[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "arco"
version = "0.2.0"
description = "Python bindings for Arco optimization library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "licenses/BSD-3-Clause.txt" }
license-files = [
    "licenses/HiGHS-MIT.txt",
]
authors = [
    { name = "Arco maintainers" },
]
maintainers = [
    { name = "pesap", email = "pesap@users.noreply.github.com" },
]
keywords = ["optimization", "linear-programming", "mixed-integer-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/pesap/arco"
Repository = "https://github.com/pesap/arco"
Issues = "https://github.com/pesap/arco/issues"
Changelog = "https://github.com/pesap/arco/releases"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["arco.pyi"]
python-source = "."

[dependency-groups]
dev = [
    "ipython>=8.18.1",
]
