[package]
name = "arco-core"
version = { workspace = true }
description = "Core model builder for Arco"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
arco-expr = { workspace = true }
arco-tools = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
arrow-array = { workspace = true, optional = true }

[features]
default = []
arrow = ["dep:arrow-array"]
