[package]
name = "arco-highs"
version = { workspace = true }
description = "Zero-copy bridge from Arco model to HiGHS solver"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
arco-core = { workspace = true }
arco-expr = { workspace = true }
arco-solver = { workspace = true }
arco-tools = { workspace = true }
highs = "1.8"
highs-sys = "1.12.1"
tracing = { workspace = true }
tokio = { version = "1.35", features = ["sync", "rt"], optional = true }
rayon = { version = "1.8", optional = true }
num_cpus = "1.16"

[features]
async = ["tokio"]
parallel = ["rayon"]
all-optimizations = ["async", "parallel"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
