[package]
name = "arco-solver"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Shared solver abstractions for Arco optimization"
repository = { workspace = true }

[lints]
workspace = true

[dependencies]

[dev-dependencies]
